[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.towncrier]
package = "vunit"
package_dir = "vunit"
single_file = false
filename="docs/news.inc"
directory = "docs/news.d/"
title_format = false
issue_format = ":vunit_issue:`{issue}`"
underlines = ["-", "~"]

    [[tool.towncrier.section]]
    path = ""

    [[tool.towncrier.type]]
    directory = "breaking"
    name = "Breaking Changes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug Fixes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "deprecation"
    name = "Deprecations"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "doc"
    name = "Documentation"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "misc"
    name = "Miscellaneous"
    showcontent = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310,311,312,313}-{fmt,unit,lint,docs}, py{38,39,310,311,312,313}-{acceptance,vcomponents}-{activehdl,ghdl,modelsim,nvc,rivierapro}, py{38,39,310,311,312,313}-coverage
isolated_build = True

[testenv]
recreate=True
passenv=ALDEC_LICENSE_FILE

deps=
    fmt: black
    pytest
    lint: pycodestyle
    lint: pylint
    lint: mypy
    lint: Pygments
    lint: setuptools
    coverage: coverage
    coverage: pycodestyle
    coverage: pylint
    coverage: mypy
    coverage: Pygments
    coverage: setuptools
    docs: docutils
    docs: furo
    docs: sphinx==7.3.7
    docs: sphinx-argparse==0.4.0
    docs: towncrier

setenv=
    acceptance-activehdl:  VUNIT_SIMULATOR=activehdl
    acceptance-ghdl:       VUNIT_SIMULATOR=ghdl
    acceptance-modelsim:   VUNIT_SIMULATOR=modelsim
    acceptance-nvc:        VUNIT_SIMULATOR=nvc
    acceptance-rivierapro: VUNIT_SIMULATOR=rivierapro

commands=
    fmt:         {envpython} -m black ./ --exclude 'vunit/vhdl/JSON-for-VHDL|.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|_build|buck-out|build|dist' {posargs}
    unit:        {envpython} -m pytest -v -ra tests/unit {posargs}
    lint:        {envpython} -m pytest -v -ra tests/lint {posargs}
    docs:        {envpython} tools/build_docs.py {envtmpdir}/docsbuild {posargs}
    acceptance:  {envpython} -m pytest -v -ra tests/acceptance {posargs}
    vcomponents: {envpython} vunit/vhdl/verification_components/run.py --clean
    coverage:    {envpython} -m coverage run --branch --source vunit/ -m pytest tests/
"""
