[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vunit_hdl"
dynamic = ["version"]
description="VUnit is an open source unit testing framework for VHDL/SystemVerilog."
urls = {homepage = "https://github.com/VUnit/vunit"}
readme = "README.md"
license = "MPL-2.0"
license-files = ["LICENSE.rst"]
authors = [
  {name = "Lars Asplund", email = "lars.anders.asplund@gmail.com"},
  {name = "Olof Kraigher", email = "olof.kraigher@gmail.com"},
]
keywords = [
    "vunit", "verification", "vhdl", "systemverilog-hdl", "verilog-hdl",
    "fpga", "asic", "unit-testing", "testbench", "uvm", "eda", "hdl"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
requires-python = ">=3.10"
dependencies = [
    "colorama",
    "tomli; python_version < '3.11'",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = [
    "vunit", "vunit.com", "vunit.parsing","vunit.parsing.verilog", "vunit.sim_if",
    "vunit.test", "vunit.ui", "vunit.vivado"
]

[tool.black]
line-length = 120

[tool.towncrier]
package = "vunit"
package_dir = "vunit"
single_file = false
filename="docs/news.inc"
directory = "docs/news.d/"
title_format = false
issue_format = ":vunit_issue:`{issue}`"
underlines = ["-", "~"]

    [[tool.towncrier.section]]
    path = ""

    [[tool.towncrier.type]]
    directory = "breaking"
    name = "Breaking Changes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug Fixes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "deprecation"
    name = "Deprecations"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "doc"
    name = "Documentation"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "misc"
    name = "Miscellaneous"
    showcontent = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{310,311,312,313}-{fmt,unit,lint,docs}, py{310,311,312,313}-{acceptance,vcomponents}-{activehdl,ghdl,modelsim,nvc,rivierapro}, py{310,311,312,313}-coverage
isolated_build = True

[testenv]
recreate=True
passenv=ALDEC_LICENSE_FILE

deps=
    fmt: black
    pytest
    lint: pycodestyle
    lint: pylint
    lint: mypy
    lint: Pygments
    lint: setuptools
    coverage: coverage
    coverage: pycodestyle
    coverage: pylint
    coverage: mypy
    coverage: Pygments
    coverage: setuptools
    docs: docutils
    docs: furo
    docs: sphinx==7.3.7
    docs: sphinx-argparse==0.4.0
    docs: towncrier

setenv=
    acceptance-activehdl:  VUNIT_SIMULATOR=activehdl
    acceptance-ghdl:       VUNIT_SIMULATOR=ghdl
    acceptance-modelsim:   VUNIT_SIMULATOR=modelsim
    acceptance-nvc:        VUNIT_SIMULATOR=nvc
    acceptance-rivierapro: VUNIT_SIMULATOR=rivierapro

commands=
    fmt:         {envpython} -m black ./ --exclude .eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|_build|buck-out|build|dist' {posargs}
    unit:        {envpython} -m pytest -v -ra tests/unit {posargs}
    lint:        {envpython} -m pytest -v -ra tests/lint {posargs}
    docs:        {envpython} tools/build_docs.py {envtmpdir}/docsbuild {posargs}
    acceptance:  {envpython} -m pytest -v -ra tests/acceptance {posargs}
    vcomponents: {envpython} vunit/vhdl/verification_components/run.py --clean
    coverage:    {envpython} -m coverage run --branch --source vunit/ -m pytest tests/
"""
