[metadata]
name = vunit_hdl
version = attr: vunit.about.version
author = Lars Asplund
author_email = lars.anders.asplund@gmail.com
license = Mozilla Public License 2.0 (MPL 2.0)
description = VUnit is an open source unit testing framework for VHDL/SystemVerilog.
long_description = attr: vunit.about.doc
url = https://github.com/VUnit/vunit
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Natural Language :: English
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Testing
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages =
    tests
    tests.lint
    tests.unit
    tests.acceptance
    vunit
    vunit.com
    vunit.parsing
    vunit.parsing.verilog
    vunit.sim_if
    vunit.test
    vunit.ui
    vunit.vivado
install_requires =
    colorama
    typing-extensions
